fix:removed align-items:center;

--- a/blocks/section/section.css
+++ b/blocks/section/section.css
@@ -1,6 +1,5 @@
 .section{
   display: flex;
-  align-items: center;
   justify-content: center;
   width: 100%;
 }
